--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
 
 ---
     <h1>{{ site.title }}</h1>{% comment %}https://www.google.com/calendar/embed?src=Y2FsZW5kYXJAbndkYy5vcmcudWs&amp;mode=AGENDA{% endcomment %}
-    <iframe src="http://www.google.com/calendar/embed?src=Y2FsZW5kYXJAbndkYy5vcmcudWs&amp;ctz=UTC" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="http://www.google.com/calendar/embed?src=Y2FsZW5kYXJAbndkYy5vcmcudWs&amp;ctz=Europe/London" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
     <h3>Digital User Groups and Organisations in the North West</h3>
     <ul>
       <li><a href="http://agilenorth.org/">AgileNorth</a></li>
