Add OWASP Manchester to list of groups

--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
       <li><a href="http://northerndigitals.com/">Northern Digitals</a> | <a href="http://twitter.com/northerndigital">@northerndigital</a></li>
       <li><a href="http://northwestengland.pm.org/">North West England Perl Mongers</a></li>
       <li><a href="http://nwrug.org/">North West Ruby User Group</a> | <a href="http://twitter.com/nwrug">@nwrug</a></li>
+      <li><a href="https://www.owasp.org/index.php/Manchester"><abbr title="Open Web Application Security Project">OWASP</abbr> Manchester Local Chapter</a></li>
       <li><a href="http://phpnw.org.uk/">PHP North West</a> | <a href="http://twitter.com/phpnw">@phpnw</a></li>
       <li><a href="http://socialmediamanchester.net/">Social Media Cafe Manchester #smc_mcr</a> | <a href="http://twitter.com/smc_mcr">@smc_mcr</a></li>
       <li><a href="http://techcelerate.org/">Techcelerate</a> | <a href="http://twitter.com/techcelerate">@techcelerate</a></li>
