Add Manchester Linux User Group to list of groups

--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
       <li><a href="http://www.manchesterdda.com/">Manchester Digital Development Agency</a> | <a href="http://twitter.com/mdda">@mdda</a></li>
       <li><a href="http://manchester.fsuk.org/">Manchester Free Software</a></li>
       <li><a href="http://www.manchestergirlgeeks.com/">Manchester Girl Geeks</a>  | <a href="http://twitter.com/mcrgirlgeeks">@mcrgirlgeeks</a></li>
+      <li><a href="http://www.manlug.org/">Manchester Linux User Group</a></li>
       <li><a href="http://nsmanchester.com/">NSManchester: Cocoa Developers MeetUp</a> | <a href="http://twitter.com/nsmanchester">@nsmanchester</a></li>
       <li><a href="http://northerndigitals.com/">Northern Digitals</a> | <a href="http://twitter.com/northerndigital">@northerndigital</a></li>
       <li><a href="http://northwestengland.pm.org/">North West England Perl Mongers</a></li>
