--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
       <li><a href="http://www.bsdgroups.org.uk/manchester/">Manchester BSD Group</a></li>
       <li><a href="http://www.manchesterdigital.com/">Manchester Digital</a> | <a href="http://twitter.com/mcrdig">@mcrdig</a></li>
       <li><a href="http://www.manchesterdda.com/">Manchester Digital Development Agency</a> | <a href="http://twitter.com/mdda">@mdda</a></li>
-      <li><a href="http://manchester.fsuk.org/">Manchester Free Software</a></li>
+      <li><a href="https://libreplanet.org/wiki/Group:Manchester">Manchester Free Software</a></li>
       <li><a href="http://www.manchestergirlgeeks.com/">Manchester Girl Geeks</a>  | <a href="http://twitter.com/mcrgirlgeeks">@mcrgirlgeeks</a></li>
       <li><a href="http://www.manlug.org/">Manchester Linux User Group</a></li>
       <li><a href="http://nsmanchester.com/">NSManchester: Cocoa Developers MeetUp</a> | <a href="http://twitter.com/nsmanchester">@nsmanchester</a></li>
@@ -30,6 +30,10 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
       <li><a href="http://socialmediamanchester.net/">Social Media Cafe Manchester #smc_mcr</a> | <a href="http://twitter.com/smc_mcr">@smc_mcr</a></li>
       <li><a href="http://techcelerate.org/">Techcelerate</a> | <a href="http://twitter.com/techcelerate">@techcelerate</a></li>
       <li><a href="http://freelancenorth.com/">FreelanceNorth</a> | <a href="http://twitter.com/freelancenorth">@freelancenorth</a></li>
+      <li><a href="http://www.devopsmanchester.co.uk">DevOps Manchester</a> | <a href="http://twitter.com/devopsmanc">@devopsmanc</a></li>
+      <li><a href="http://www.meetup.com/LiverpoolClojure/">Liverpool Clojure</a></li>
+      <li><a href="http://cheadlegeeks.org/">Cheadle Geeks</a> | <a href="http://twitter.com/cheadlegeeks">@cheadlegeeks</a></li>
+      <li><a href="http://cheadlegeeks.org/jelly">Cheadle Jelly</a> | <a href="http://twitter.com/cheadlejelly">@cheadlejelly</a></li>
     </ul>
     <form action="http://groups.google.com/group/nwdc-announcements/boxsubscribe" method="post">
       <fieldset>
