--- a/home.html
+++ b/home.html
@@ -14,14 +14,12 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
       <li><a href="http://agilenorth.org/">AgileNorth</a></li>
       <li><a href="http://geekup.org/">GeekUp</a> | <a href="http://twitter.com/geekup">@geekup</a></li>
       <li><a href="http://groups.drupal.org/north-west-uk">Drupal North West User Group</a></li>
-      <li><a href="http://manchester.vbug.net/">Manchester .NET User Group</a></li>
       <li><a href="http://www.bsdgroups.org.uk/manchester/">Manchester BSD Group</a></li>
       <li><a href="http://www.manchesterdigital.com/">Manchester Digital</a> | <a href="http://twitter.com/mcrdig">@mcrdig</a></li>
       <li><a href="http://www.manchesterdda.com/">Manchester Digital Development Agency</a> | <a href="http://twitter.com/mdda">@mdda</a></li>
       <li><a href="https://libreplanet.org/wiki/Group:Manchester">Manchester Free Software</a></li>
       <li><a href="http://www.manchestergirlgeeks.com/">Manchester Girl Geeks</a>  | <a href="http://twitter.com/mcrgirlgeeks">@mcrgirlgeeks</a></li>
       <li><a href="http://www.manlug.org/">Manchester Linux User Group</a></li>
-      <li><a href="http://nsmanchester.com/">NSManchester: Cocoa Developers MeetUp</a> | <a href="http://twitter.com/nsmanchester">@nsmanchester</a></li>
       <li><a href="http://northerndigitals.com/">Northern Digitals</a> | <a href="http://twitter.com/northerndigital">@northerndigital</a></li>
       <li><a href="http://northwestengland.pm.org/">North West England Perl Mongers</a></li>
       <li><a href="http://nwrug.org/">North West Ruby User Group</a> | <a href="http://twitter.com/nwrug">@nwrug</a></li>
@@ -34,6 +32,8 @@ meta_description: "NWDC brings the leaders of the UK’s North West Digital Comm
       <li><a href="http://www.meetup.com/LiverpoolClojure/">Liverpool Clojure</a></li>
       <li><a href="http://cheadlegeeks.org/">Cheadle Geeks</a> | <a href="http://twitter.com/cheadlegeeks">@cheadlegeeks</a></li>
       <li><a href="http://cheadlegeeks.org/jelly">Cheadle Jelly</a> | <a href="http://twitter.com/cheadlejelly">@cheadlejelly</a></li>
+      <li><a href="http://www.meetup.com/Manchester-Web-Performance-Group/">Manchester Web Performance Group</a> | <a href="http://twitter.com/MCRWebPerf">@MCRWebPerf</a></li>
+      <li><a href="http://www.meetup.com/AWS-User-Group-North/">AWS User Group North</a> | <a href="http://twitter.com/AWSUGN">@AWSUGN</a></li>
     </ul>
     <form action="http://groups.google.com/group/nwdc-announcements/boxsubscribe" method="post">
       <fieldset>
